k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: dev
spec:
  selector:
    app: flask-app
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
